<resources>
    <string name="app_name">App Video</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="hint_username">Enter Username</string>
    <string name="hint_password">Enter Password</string>
    <string name="login_title_other">Login with </string>
    <string name="home_title">Video List</string>
    <string name="hint_config_pass">Config Password</string>
    <string name="back">Back</string>
    <string name="hint_search">Find video</string>
    <string name="logout_title">Logout</string>
    <string name="channel_title">Channel Name</string>
    <string name="logout">Logout</string>
    <string name="search">Find</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="colon">:</string>
    <string name="quality">Quality</string>
    <string name="qa_144">144p</string>
    <string name="qa_240">240p</string>
    <string name="qa_360">360p</string>
    <string name="qa_480">480p</string>
    <string name="qa_720">720p</string>
    <string name="delete_all">Delete All</string>
</resources>