<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.LoginActivity">

    <TextView
        android:id="@+id/tv_title_ra"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/register_title"
        android:gravity="center_horizontal"
        android:textSize="30dp"
        android:textColor="@color/blue_violet"
        android:textStyle="italic|bold"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/frame_1_ra"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_ra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_et_login"
        android:layout_width="300dp"
        android:layout_height="60dp">

        <EditText
            android:hint="@string/hint_username"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="50dp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_2_ra"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/frame_1_ra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_et_login"
        android:layout_width="300dp"
        android:layout_height="60dp">

        <EditText
            android:hint="@string/hint_password"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="50dp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_3_ra"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/frame_2_ra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_et_login"
        android:layout_width="300dp"
        android:layout_height="60dp">

        <EditText
            android:hint="@string/hint_config_pass"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="50dp" />
    </FrameLayout>

    <Button
        android:id="@+id/btn_register_ra"
        android:layout_marginTop="30dp"
        android:text="@string/register_title"
        android:background="@drawable/bg_bt_login"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/frame_3_ra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="300dp"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/btn_login_ra"
        android:layout_marginTop="30dp"
        android:text="@string/login_title"
        android:background="@drawable/bg_et_login"
        app:layout_constraintTop_toBottomOf="@id/btn_register_ra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="300dp"
        android:layout_height="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>