<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.LoginActivity">

        <TextView
            android:id="@+id/tv_title_la"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="@string/login_title"
            android:textColor="@color/blue_violet"
            android:textSize="30sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/frame_1_la"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_et_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_la">

            <EditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:hint="@string/hint_username"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="TextFields" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_2_la"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_et_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame_1_la">

            <EditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:hint="@string/hint_password"
                android:importantForAutofill="no"
                android:inputType="text" />
        </FrameLayout>

        <Button
            android:id="@+id/btn_login_la"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_bt_login"
            android:text="@string/login_title"
            android:textColor="#FFF8E1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame_2_la"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_register_la"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_et_login"
            android:text="@string/register_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login_la" />

        <TextView
            android:id="@+id/tv_title_other_la"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/login_title_other"
            android:textColor="@color/blue_violet"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register_la"
            tools:ignore="TextSizeCheck" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_other_la">

            <ImageView
                android:id="@+id/iv_google"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="50dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_google_40" />

            <ImageView
                android:id="@+id/iv_facebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_facebook_40" />
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>