<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_search_sa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_et_login"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_search_30" />

            <EditText
                android:id="@+id/et_search_sa"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:hint="@string/hint_search"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_back_sa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:text="@string/back"
            android:textColor="@color/violet"
            android:textSize="25dp"
            tools:ignore="HardcodedText,SpUsage,TextSizeCheck,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_history_sa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linear_search_sa">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_history_sa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/bt_delete_all_sa"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_bt_login"
            android:text="@string/delete_all" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_video_sa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/linear_search_sa" />

</androidx.constraintlayout.widget.ConstraintLayout>